将代码中的 URL 替换为 URI (#4131)